--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div id="someTimer3" class="someTimer" style="width: 700px; margin: 0 auto;"></div>
 
 <script src="http://www.lanrenzhijia.com/ajaxjs/jquery.min.js"></script>
-<script src="js/TimeCircles.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/SANJIEMOFANG/sanjiemofang.github.io@v1.1/js/TimeCircles.js"></script>
 <script>
 $(function(){
 	$('#someTimer1').TimeCircles({
