--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>jQuery计时器插件TimeCircles多种效果</title>
-<link rel="stylesheet" href="css/TimeCircles.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/SANJIEMOFANG/sanjiemofang.github.io@v1.1/css/TimeCircles.css" />
 </head>
 <body>
 <h1 style="margin: 40px; font: 32px Microsoft Yahei; text-align: center;">jQuery计时器插件TimeCircles演示1</h1>
