--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/SANJIEMOFANG/sanjiemofang.github.io@v1.1/css/TimeCircles.css" />
 </head>
 <body>
-<h1 style="margin: 40px; font: 32px Microsoft Yahei; text-align: center;">jQuery计时器插件TimeCircles演示1</h1>
+<h1 style="margin: 40px; font: 32px Microsoft Yahei; text-align: center;">jQuery计时器插件TimeCircles演示</h1>
 
 <p style="width: 580px; margin: 0 auto; text-align: center;">离2018年1月1日还有</p>
 <div id="someTimer1" class="someTimer" data-date="2018-01-01 00:00:00" style="width: 700px; margin: 0 auto;"></div>
